--- a/ReadingApp/app/src/main/res/layout/activity_main.xml
+++ b/ReadingApp/app/src/main/res/layout/activity_main.xml
@@ -9,27 +9,14 @@
     tools:layout_editor_absoluteY="81dp">
 
     <TextView
-        android:id="@+id/scan_id"
-        android:layout_width="wrap_content"
-        android:layout_height="17dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"
-        android:text="@string/idText"
-        android:textIsSelectable="true"
-        app:layout_constraintStart_toStartOf="@+id/scan_street"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="spread_inside" />
-
-    <TextView
         android:id="@+id/scan_street"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
-        android:text="@string/addressText"
         android:textIsSelectable="true"
         app:layout_constraintStart_toStartOf="@+id/scan_barcode_button"
-        app:layout_constraintTop_toBottomOf="@+id/scan_id" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 
