--- a/ReadingApp/app/src/main/res/layout/activity_main.xml
+++ b/ReadingApp/app/src/main/res/layout/activity_main.xml
@@ -5,20 +5,44 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/backgroundLight"
     tools:context=".MainActivity"
-    tools:layout_editor_absoluteY="81dp">
+    tools:layout_editor_absoluteY="81dp"
+
+    >
 
     <TextView
-        android:id="@+id/scan_street"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/box_address_textView"
+        android:layout_width="331dp"
+        android:layout_height="166dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/textview_template"
+        android:padding="30px"
         android:textIsSelectable="true"
-        app:layout_constraintStart_toStartOf="@+id/scan_barcode_button"
+        android:textSize="25dp"
+        app:layout_constraintBottom_toTopOf="@+id/scan_barcode_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.509"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/box_status_textView"
+        app:layout_constraintVertical_bias="0.424" />
+
+
+    <TextView
+        android:id="@+id/box_status_textView"
+        android:layout_width="331dp"
+        android:layout_height="120dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="44dp"
+        android:background="@drawable/textview_template"
+        android:padding="30px"
+        android:textIsSelectable="true"
+        android:textSize="25dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.509"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-
 
     <Button
         android:id="@+id/scan_barcode_button"
@@ -26,6 +50,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="16dp"
+        android:background="@drawable/button_template"
         android:text="@string/barcodeScan"
         app:layout_constraintBottom_toTopOf="@+id/scan_nfc_button"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -37,9 +62,33 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="16dp"
+        android:background="@drawable/button_template"
         android:text="@string/nfcScan"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="331dp"
+        android:layout_height="19dp"
+        android:layout_marginBottom="8dp"
+        android:paddingLeft="30px"
+        android:text="Status:"
+        app:layout_constraintBottom_toTopOf="@+id/box_status_textView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="331dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
+        android:paddingLeft="30px"
+        android:text="Destination Address:"
+        android:textAllCaps="false"
+        app:layout_constraintBottom_toTopOf="@+id/box_address_textView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
