--- a/ReadingApp/app/src/main/res/values/styles.xml
+++ b/ReadingApp/app/src/main/res/values/styles.xml
@@ -5,7 +5,8 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/colorPrimaryLight</item>
+        <item name="actionBarTheme">@style/AppTheme.MyActionBarStyle</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -16,5 +17,9 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="AppTheme.MyActionBarStyle" parent="AppTheme">
+        <item name="android:textColor">@color/colorPrimaryLight</item>
+    </style>
 
 </resources>
