--- a/ReadingApp/app/src/main/res/drawable/button_template.xml
+++ b/ReadingApp/app/src/main/res/drawable/button_template.xml
@@ -2,20 +2,21 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
     <item android:state_pressed="true" >
         <shape android:shape="rectangle"  >
-            <corners android:radius="5dip" />
+            <corners android:radius="0dip" />
             <solid android:color="@color/colorPrimaryDark"/>
         </shape>
     </item>
     <item android:state_focused="true">
         <shape android:shape="rectangle"  >
-            <corners android:radius="5dip" />
+            <corners android:radius="0dip" />
             <solid android:color="#58857e"/>
         </shape>
     </item>
     <item >
         <shape android:shape="rectangle"  >
-            <corners android:radius="5dip" />
-            <solid android:color="@color/colorPrimary"/>
+            <corners android:radius="0dip" />
+            <solid android:color="@color/colorPrimaryLight"/>
+            <stroke android:color="@color/colorPrimary"/>
         </shape>
     </item>
 </selector>
