--- a/ReadingApp/app/src/main/res/drawable/textview_template.xml
+++ b/ReadingApp/app/src/main/res/drawable/textview_template.xml
@@ -2,8 +2,9 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
     <item >
         <shape android:shape="rectangle"  >
-            <corners android:radius="5dip" />
-            <solid android:color="@color/textBackground"/>
+            <corners android:radius="0dip" />
+            <stroke android:color="#000" />
+            <solid android:color="#fff"/>
         </shape>
     </item>
 
