--- a/ReadingApp/app/src/main/res/layout/activity_main.xml
+++ b/ReadingApp/app/src/main/res/layout/activity_main.xml
@@ -1,94 +1,104 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/backgroundLight"
-    tools:context=".MainActivity"
-    tools:layout_editor_absoluteY="81dp"
+    android:background="@color/colorPrimary"
+    android:orientation="vertical"
+    tools:context=".MainActivity">
 
-    >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="2"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/box_address_textView"
-        android:layout_width="331dp"
-        android:layout_height="166dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="5dp"
-        android:background="@drawable/textview_template"
-        android:padding="30px"
-        android:textIsSelectable="true"
-        android:textSize="25dp"
-        app:layout_constraintBottom_toTopOf="@+id/scan_barcode_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.509"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/box_status_textView"
-        app:layout_constraintVertical_bias="0.424" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:background="@drawable/textview_template"
+            android:layout_margin="5dp"
+            android:padding="5dp">
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="bottom"
+                android:text="Status:" />
+
+            <TextView
+                android:id="@+id/box_status_textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:textIsSelectable="true"
+                android:textSize="25dp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:orientation="vertical"
+            android:background="@drawable/textview_template"
+            android:layout_margin="5dp"
+            android:padding="5dp">
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="bottom"
+                android:text="Destination Address:"
+                android:textAllCaps="false" />
+
+            <TextView
+                android:id="@+id/box_address_textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="4"
+                android:background="@drawable/textview_template"
+                android:textIsSelectable="true"
+                android:textSize="25dp" />
+
+        </LinearLayout>
 
 
-    <TextView
-        android:id="@+id/box_status_textView"
-        android:layout_width="331dp"
-        android:layout_height="120dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="44dp"
-        android:background="@drawable/textview_template"
-        android:padding="30px"
-        android:textIsSelectable="true"
-        android:textSize="25dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.509"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/scan_barcode_button"
-        android:layout_width="332dp"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="16dp"
-        android:background="@drawable/button_template"
-        android:text="@string/barcodeScan"
-        app:layout_constraintBottom_toTopOf="@+id/scan_nfc_button"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+    </LinearLayout>
 
-    <Button
-        android:id="@+id/scan_nfc_button"
-        android:layout_width="332dp"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="16dp"
-        android:background="@drawable/button_template"
-        android:text="@string/nfcScan"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="14"
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="331dp"
-        android:layout_height="19dp"
-        android:layout_marginBottom="8dp"
-        android:paddingLeft="30px"
-        android:text="Status:"
-        app:layout_constraintBottom_toTopOf="@+id/box_status_textView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="331dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="4dp"
-        android:paddingLeft="30px"
-        android:text="Destination Address:"
-        android:textAllCaps="false"
-        app:layout_constraintBottom_toTopOf="@+id/box_address_textView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
-</android.support.constraint.ConstraintLayout>
+        <Button
+            android:id="@+id/scan_barcode_button"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/button_template"
+            android:text="@string/barcodeScan"
+            android:layout_margin="5dp"/>
+
+        <Button
+            android:id="@+id/scan_nfc_button"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/button_template"
+            android:text="@string/nfcScan"
+            android:layout_margin="5dp"/>
+    </LinearLayout>
+
+
+</LinearLayout>
