--- a/ReadingApp/app/src/main/res/values/colors.xml
+++ b/ReadingApp/app/src/main/res/values/colors.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#00b0ff</color>
-    <color name="colorPrimaryDark">#0081cb</color>
-    <color name="colorPrimaryLight">#69e2ff</color>
+    <color name="colorPrimary">#2979ff</color>
+    <color name="colorPrimaryDark">#004ecb</color>
+    <color name="colorPrimaryLight">#75a7ff</color>
 
     <color name="colorSecondary">#009688</color>
     <color name="colorSecondaryDark">#00675b</color>
     <color name="colorSecondaryLight">#52c7b8</color>
 
     <color name="backgroundDark"></color>
-    <color name="backgroundLight">#fff</color>
-    <!--<color name="backgroundLight">#E1E1E0</color>-->
+    <!--<color name="backgroundLight">#fff</color>-->
+    <color name="backgroundLight">#E1E1E0</color>
 
     <color name="textBackground">#e1f5fe</color>
 
