--- a/ReadingApp/app/src/main/res/drawable/button_template.xml
+++ b/ReadingApp/app/src/main/res/drawable/button_template.xml
@@ -15,8 +15,7 @@
     <item >
         <shape android:shape="rectangle"  >
             <corners android:radius="0dip" />
-            <solid android:color="@color/colorPrimaryLight"/>
-            <stroke android:color="@color/colorPrimary"/>
+            <solid android:color="@color/colorPrimary"/>
         </shape>
     </item>
 </selector>
