--- a/ReadingApp/app/src/main/res/layout/activity_main.xml
+++ b/ReadingApp/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
+    android:background="#fff"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
@@ -44,10 +44,10 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:orientation="vertical"
-            android:background="@drawable/textview_template"
             android:layout_margin="5dp"
+            android:layout_weight="8"
+            android:background="@drawable/textview_template"
+            android:orientation="vertical"
             android:padding="5dp">
 
             <TextView
