--- a/ReadingApp/app/src/main/res/layout/activity_main.xml
+++ b/ReadingApp/app/src/main/res/layout/activity_main.xml
@@ -22,14 +22,17 @@
             android:orientation="vertical"
             android:background="@drawable/textview_template"
             android:layout_margin="5dp"
-            android:padding="5dp">
+            android:padding="5dp"
+            >
 
             <TextView
                 android:id="@+id/textView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="bottom"
-                android:text="Status:" />
+                android:text="Status:"
+                android:paddingLeft="24px"
+                />
 
             <TextView
                 android:id="@+id/box_status_textView"
@@ -37,7 +40,9 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
                 android:textIsSelectable="true"
-                android:textSize="25dp" />
+                android:textSize="25dp"
+                android:paddingLeft="24px"
+                />
 
         </LinearLayout>
 
@@ -56,7 +61,9 @@
                 android:layout_height="wrap_content"
                 android:gravity="bottom"
                 android:text="Destination Address:"
-                android:textAllCaps="false" />
+                android:textAllCaps="false"
+                android:paddingLeft="24px"
+                />
 
             <TextView
                 android:id="@+id/box_address_textView"
@@ -65,7 +72,9 @@
                 android:layout_weight="4"
                 android:background="@drawable/textview_template"
                 android:textIsSelectable="true"
-                android:textSize="25dp" />
+                android:textSize="25dp"
+                android:paddingLeft="24px"
+                />
 
         </LinearLayout>
 
