--- a/WritingApp/app/src/main/res/values/styles.xml
+++ b/WritingApp/app/src/main/res/values/styles.xml
@@ -5,7 +5,28 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/colorPrimaryLight</item>
+        <item name="actionBarTheme">@style/AppTheme.MyActionBarStyle</item>
+        <item name="actionBarStyle">@style/MyActionBarLogo</item>
+    </style>
+
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="AppTheme.MyActionBarStyle" parent="AppTheme">
+        <item name="android:textColor">@color/colorPrimaryLight</item>
+    </style>
+
+    <style name="MyActionBarLogo" parent="@style/Widget.AppCompat.Light.ActionBar">
+        <item name="background">@color/backgroundTitle</item>
+        <item name="logo">@mipmap/ic_launcher2</item>
+        <item name="displayOptions">useLogo</item>
     </style>
 
 </resources>
