--- a/ReadingApp/app/src/main/res/values/colors.xml
+++ b/ReadingApp/app/src/main/res/values/colors.xml
@@ -6,15 +6,18 @@
     <!--<color name="colorPrimaryDark">#004ecb</color>-->
     <!--<color name="colorPrimaryLight">#75a7ff</color>-->
 
-    <color name="colorPrimary">#ef6c00</color>
+    <color name="colorPrimary">#009fe3</color>
+    <color name="colorPrimaryDark">#004f9f</color>
+    <color name="colorPrimaryLight">#ff9d3f</color>
+    <!--<color name="colorPrimary">#ef6c00</color>
     <color name="colorPrimaryDark">#b53d00</color>
     <color name="colorPrimaryLight">#ff9d3f</color>
 
     <color name="colorSecondary">#009688</color>
     <color name="colorSecondaryDark">#00675b</color>
-    <color name="colorSecondaryLight">#52c7b8</color>
+    <color name="colorSecondaryLight">#52c7b8</color>-->
 
-    <color name="backgroundDark"></color>
+    <color name="backgroundTitle">#ffffff</color>
     <!--<color name="backgroundLight">#fff</color>-->
     <color name="backgroundLight">#E1E1E0</color>
 
