--- a/ReadingApp/app/src/main/res/layout/activity_main.xml
+++ b/ReadingApp/app/src/main/res/layout/activity_main.xml
@@ -18,31 +18,28 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:background="@drawable/textview_template"
             android:layout_margin="5dp"
-            android:padding="5dp"
-            >
+            android:layout_weight="1"
+            android:background="@drawable/textview_template"
+            android:orientation="vertical"
+            android:padding="5dp">
 
             <TextView
                 android:id="@+id/textView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="bottom"
-                android:text="Status:"
                 android:paddingLeft="24px"
-                />
+                android:text="Status:" />
 
             <TextView
                 android:id="@+id/box_status_textView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
-                android:textIsSelectable="true"
-                android:textSize="25dp"
                 android:paddingLeft="24px"
-                />
+                android:textIsSelectable="true"
+                android:textSize="25dp" />
 
         </LinearLayout>
 
@@ -60,10 +57,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="bottom"
-                android:text="Destination Address:"
-                android:textAllCaps="false"
                 android:paddingLeft="24px"
-                />
+                android:text="Included order items:"
+                android:textAllCaps="false" />
+
 
             <TextView
                 android:id="@+id/box_address_textView"
@@ -71,14 +68,28 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="4"
                 android:background="@drawable/textview_template"
-                android:textIsSelectable="true"
-                android:textSize="25dp"
                 android:paddingLeft="24px"
-                />
+                android:textIsSelectable="true"
+                android:textSize="25dp" />
 
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.5"
+            android:orientation="vertical">
 
+            <Button
+                android:id="@+id/button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/button_template_dark"
+                android:text="Return" />
+            android:text="Return" />
+        </LinearLayout>
 
     </LinearLayout>
 
@@ -87,7 +98,6 @@
         android:layout_height="match_parent"
         android:layout_weight="14"
         android:orientation="horizontal">
-
 
 
         <Button
@@ -108,6 +118,5 @@
             android:text="@string/nfcScan"
             android:layout_margin="5dp"/>
     </LinearLayout>
-
 
 </LinearLayout>
