--- a/ReadingApp/app/src/main/res/layout/activity_main.xml
+++ b/ReadingApp/app/src/main/res/layout/activity_main.xml
@@ -39,7 +39,7 @@
                 android:layout_weight="2"
                 android:paddingLeft="24px"
                 android:textIsSelectable="true"
-                android:textSize="25dp" />
+                android:textSize="20dp" />
 
         </LinearLayout>
 
@@ -70,7 +70,7 @@
                 android:background="@drawable/textview_template"
                 android:paddingLeft="24px"
                 android:textIsSelectable="true"
-                android:textSize="25dp" />
+                android:textSize="20dp" />
 
         </LinearLayout>
 
@@ -81,7 +81,7 @@
             android:orientation="vertical">
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/return_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
