--- a/ReadingApp/app/src/main/res/layout/activity_nfc.xml
+++ b/ReadingApp/app/src/main/res/layout/activity_nfc.xml
@@ -39,10 +39,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
-                android:textIsSelectable="true"
-                android:textSize="25dp"
                 android:paddingLeft="24px"
-                />
+                android:textIsSelectable="true"
+                android:textSize="20dp" />
 
         </LinearLayout>
 
@@ -71,14 +70,28 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="4"
                 android:background="@drawable/textview_template"
-                android:textIsSelectable="true"
-                android:textSize="25dp"
                 android:paddingLeft="24px"
-                />
+                android:textIsSelectable="true"
+                android:textSize="20dp" />
 
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.5"
+            android:orientation="vertical">
 
+            <Button
+                android:id="@+id/return_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/button_template_dark"
+                android:text="Return" />
+            android:text="Return" />
+        </LinearLayout>
 
     </LinearLayout>
 
