--- a/WritingApp/app/src/main/res/layout/activity_main.xml
+++ b/WritingApp/app/src/main/res/layout/activity_main.xml
@@ -7,35 +7,30 @@
     tools:context=".MainActivity"
     tools:layout_editor_absoluteY="81dp">
 
-    <Switch
-        android:id="@+id/switch1"
-        android:layout_width="50dp"
-        android:layout_height="33dp"
-        android:layout_marginBottom="268dp"
-        android:checked="false"
-        android:textOff="@string/data_1"
-        android:textOn="@string/data_2"
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Reset"
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addressTxt"
-        tools:checked="false" />
+        app:layout_constraintTop_toBottomOf="@+id/addressTxt" />
 
     <TextView
         android:id="@+id/addressTxt"
-        android:layout_width="215dp"
-        android:layout_height="wrap_content"
+        android:layout_width="117dp"
+        android:layout_height="16dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="76dp"
-        android:text="This switch changes the destination address of the box no. 10100 to simulate a crossdocking."
+        android:text="Reset all box data."
         android:textIsSelectable="true"
-        app:layout_constraintBottom_toTopOf="@+id/switch1"
+        app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.692" />
+
 
 </android.support.constraint.ConstraintLayout>
